second commit, add contact and footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,19 @@
             </nav>
         </div>
     </header>
-    <p>Check out some of my work by following the links below!</p>
+    <p>Check out some of my work by following the links below!
+    </p>
+    <footer>
+        <div class = "container2">
+            <h4 class = "nav-bar-footer-socials">Social Media Links</h4>
+            <nav>
+                <ul class = "listfooter">
+                    <li><a href="https://www.linkedin.com/in/thomasporter96/">LinkedIn</a></li>
+                    <li><a href="https://www.instagram.com/tommyportermusic/">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/thomas.porter.1996/">Facebook</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
