fourth commit, add titles and change some text

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
             </nav>
         </div>
     </header>
+    <h1 class="bio-name">Bio:</h1>
     <p>Currently I am an audio engineer with 5+ years of experience looking to make a switch into the tech industry. 
         I've always been interested in tech and am now pursuing that passion more professionally. 
         After many years working in the music industry I have started to notice flaws in the softwares I have to use daily. 
@@ -29,7 +30,7 @@
         I love the sense of satisfaction I get when I complete a tough project. I believe my past experiences as an audio engineer mixed
          with my education through Grand Circus will allow me to one day be a every effective software developer.
         When I'm not in class or working I enjoy camping, hiking, running, and playing/writing music. I often have shows in the Metro 
-        Detroit Area with the many bands I play guitar for.
+        Detroit Area with the many bands I play guitar for. If you'd like to get in contact with me fill out the form below!
     </p>
     <div class="contact">
         <form action="action_page.php">
