--- a/home.html
+++ b/home.html
@@ -20,7 +20,8 @@
             </nav>
         </div>
     </header>
-    <p>Welcome to my website! I am currently a student at Grand Circus in Detroit Michigan.
+    <h1 class="welcome">Welcome!</h1>
+    <p>Thanks for visiting my website! I am currently a student at Grand Circus in Detroit Michigan.
         You can check out my work in my Portfolio page or read more about me on the About page.
     </p>
     <footer>
