--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
             </nav>
         </div>
     </header>
+    <h1 class="portfolio-name">Portfolio:</h1>
     <p>Check out some of my work by following the links below!
     </p>
     <footer>
