sixth commit, add portfolio links and different sections

--- a/home.html
+++ b/home.html
@@ -24,6 +24,18 @@
     <p>Thanks for visiting my website! I am currently a student at Grand Circus in Detroit Michigan.
         You can check out my work in my Portfolio page or read more about me on the About page.
     </p>
+    <h1 class="blog">Blog</h1>
+    <p>This is my blog. I dont do it often. Here's some random letters:
+        jsdfjshfgkhsfkjghksjhgkjshdfkjshdkjfgjhsGDFKDFJHG'ALSJ;HKBAKDBFBKDF
+        jhdgfbfDJKVns;dfhj.kjwbSNV.KbsdjkfhsKD.JBV.KsckJSA;DKJHSJH;ajhdf;kjsdf
+        kljGDFLKJbsd.kjnbAJKFkjadhf.kjahDF.KJhd.fkjhA.KJFHkhdgf,hdfhgdflhglhl
+    </p>
+    <h1 class="hometown">Hometown</h1>
+    <p>I live in Oak Park. It has a lot of oaks....and parks. Here are more letters:
+        jsdfjshfgkhsfkjghksjhgkjshdfkjshdkjfgjhsGDFKDFJHG'ALSJ;HKBAKDBFBKDF
+        jhdgfbfDJKVns;dfhj.kjwbSNV.KbsdjkfhsKD.JBV.KsckJSA;DKJHSJH;ajhdf;kjsdf
+        kljGDFLKJbsd.kjnbAJKFkjadhf.kjahDF.KJhd.fkjhA.KJFHkhdgf,hdfhgdflhglhl
+    </p>
     <footer>
         <div class = "container2">
             <h4 class = "nav-bar-footer-socials">Social Media Links</h4>
