--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,14 @@
     <h1 class="portfolio-name">Portfolio:</h1>
     <p>Check out some of my work by following the links below!
     </p>
+    <ul class="port-links">
+        <li><a href="https://github.com/tommyporter14/LibraryOOPGroupProject">OOP Library</a></li>
+            <p class="library-descript">Made an libraray application with a group of peers usin OOP concepts</p>
+        <li><a href="https://github.com/tommyporter14/snake_game">Snake Game</a></li>
+        <p class="library-descript">Made a cool version of the classic game snake</p>
+        <li><a href="https://github.com/tommyporter14/music_chord_builder">Music Chord Builder</a></li>
+        <p class="library-descript">Made an app that can help people who don't know music theory find the notes in different chords</p>
+    </ul>
     <footer>
         <div class = "container2">
             <h4 class = "nav-bar-footer-socials">Social Media Links</h4>
